<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/title"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/obj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_camera"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/camera"
            android:spinnerMode="dropdown" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/way"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/obj"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_option"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/option"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:entries="@array/option"
            android:spinnerMode="dropdown" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/way"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_light"
            android:textSize="16sp" />

        <Switch
            android:id="@+id/switch_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/infrared_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/light"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_infrared_light"
            android:textSize="16sp" />

        <Switch
            android:id="@+id/switch_infrared_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/sync"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/infrared_light"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keep_sync"
            android:textSize="16sp" />

        <Switch
            android:id="@+id/switch_keep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:checked="true" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/face"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sync"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/face_det_control"
            android:textSize="16sp" />

        <Switch
            android:id="@+id/switch_face"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:checked="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/warning_face" />

    </LinearLayout>

    <Button
        android:id="@+id/open"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/face"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/open_btn"
        android:text="@string/open"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/attention"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/open"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/attention"
        android:text="@string/storage_address"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/attention_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/attention"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:text="111111111111111111"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="注意：该测试用例存储方式适用于Android8以下系统！"
        android:textColor="@color/colorAccent"
        android:textSize="14sp" />

</RelativeLayout>